# gdansk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  agents.md  build.rs  main.py  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  prek.toml  pyproject.toml
.agents/skills/commit-and-push/: SKILL.md
.github/workflows/: publish.yml  test.yml
examples/fastapi/: .gitignore  README.md  __init__.py  main.py  pyproject.toml
examples/fastapi/src/mount/: __init__.py
examples/fastapi/src/mount/__tests__/unit/: test_main.py
examples/fastapi/src/mount/pages/: package.json
examples/fastapi/src/mount/views/: package-lock.json  package.json
examples/fastapi/src/mount/views/apps/hello/: app.tsx  page.tsx
examples/get-time/: README.md  package-lock.json  page.tsx  pyproject.toml  server.py
examples/get-time/src/get_time/: __init__.py  __main__.py  page.tsx
examples/get-time/src/get_time/views/: deno.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/get-time/src/get_time/views/apps/get-time/: app.tsx
examples/get-time/src/get_time/views/widgets/get-time/: global.css.d.ts  widget.tsx
examples/inertia/: .gitignore  README.md  main.py  pyproject.toml
examples/inertia/src/gdansk_inertia_example/__tests__/unit/: test_main.py
examples/inertia/src/gdansk_inertia_example/views/: package.json  tsconfig.json  vite.config.ts
examples/inertia/src/gdansk_inertia_example/views/app/: app.css  layout.tsx  page-types.test.ts  page.tsx
examples/inertia/src/gdansk_inertia_example/views/src/: app.css  main.tsx
examples/inertia/src/gdansk_inertia_example/views/src/Pages/: Home.tsx
examples/production/: README.md  pyproject.toml
examples/production/src/production/: __init__.py  __main__.py
examples/production/src/production/views/: package.json
examples/production/src/production/views/widgets/hello/: widget.tsx
examples/shadcn/: README.md  package.json  pyproject.toml
examples/shadcn/src/shadcn/: __init__.py  __main__.py  page.tsx
examples/shadcn/src/shadcn/__tests__/unit/: test___main__.py
examples/shadcn/src/shadcn/pages/components/ui/: checkbox.tsx
examples/shadcn/src/shadcn/views/: components.json  deno.json  global.css  global.css.d.ts  package-lock.json  package.json  vite.config.ts
examples/shadcn/src/shadcn/views/apps/todo/: app.tsx  page.tsx
examples/shadcn/src/shadcn/views/components/ui/: button.tsx  checkbox.tsx  input.tsx
examples/shadcn/src/shadcn/views/plugins/: tailwind-wrapper.mjs  tailwindcss.mjs
examples/shadcn/src/shadcn/views/widgets/tailwind_smoke/: widget.tsx
examples/shadcn/src/shadcn/views/widgets/todo/: widget.tsx
examples/ssr/: .gitignore  README.md  pyproject.toml
examples/ssr/src/ssr/: __init__.py  __main__.py
examples/ssr/src/ssr/pages/: package-lock.json
examples/ssr/src/ssr/views/: package-lock.json  package.json  vite.config.ts
examples/ssr/src/ssr/views/widgets/hello-ssr/: widget.tsx
skills/debug-gdansk/: SKILL.md
skills/debug-gdansk/agents/: openai.yaml
skills/debug-gdansk/references/: path-contract.md  troubleshooting.md
skills/use-gdansk/: SKILL.md
skills/use-gdansk/agents/: openai.yaml
skills/use-gdansk/references/: adoption-checklist.md  integration-options.md  page-contract-and-tool-wiring.md  quickstart.md  troubleshooting.md
src/: bundle.rs  js_plugin_runner.mjs  lib.rs  runtime.js  runtime.rs  tailwind_worker.js
src/gdansk/: __init__.py  _core.py  _core.pyi  _schema.py  amber.py  base.html.j2  context.py  core.py  fastapi.py  inertia.py  js_plugins.py  json_schema.py  manifest.py  metadata.html.j2  metadata.py  page.html.j2  plugins.py  protocol.py  render.py  resource_meta.py  runtime_inline_wrapper.js  runtime_module_wrapper.js  ship_client_wrapper.js  ship_server_wrapper.js  tailwind.py  template.html.j2  utils.py  vite.py  widget.py  widget_meta.py
src/gdansk/__tests__/: conftest.py  test_core.py
src/gdansk/__tests__/fixtures/: tailwind_worker.py
src/gdansk/__tests__/fixtures/views/: with_css.tsx
src/gdansk/__tests__/fixtures/views/apps/nested/page/: app.tsx
src/gdansk/__tests__/fixtures/views/apps/with_css/: app.tsx
src/gdansk/__tests__/fixtures/views/plugins/: append-comment.mjs  watch-comment.mjs
src/gdansk/__tests__/integration/: test__core.py  test_core.py  test_js_plugins.py  test_postcss.py  test_tailwind.py
src/gdansk/__tests__/unit/: conftest.py  test__core.py  test_context.py  test_core.py  test_fastapi.py  test_inertia.py  test_manifest.py  test_metadata.py  test_plugins.py  test_postcss.py  test_protocol.py  test_render.py  test_schema.py  test_tailwind.py  test_utils.py  test_vite.py  test_widget.py  test_widget_meta.py
src/gdansk/experimental/: __init__.py  postcss.py
src/gdansk/inertia/: __init__.py  config.py  core.py  page.py  page_types.py  props.py  shared.py  utils.py
src/gdansk/inertia/__tests__/unit/: conftest.py  helpers.py  test_config.py  test_core.py  test_page.py  test_page_types.py  test_props.py
src/gdansk/plugins/: __init__.py  lightningcss.py
src/plugins/: app_entrypoint.rs  lightningcss.rs  mod.rs  runtime_module.rs  server_entrypoint.rs  shared.rs  vite.rs  vite_js_host.js  vite_node_fs_promises.js  vite_node_module.js  vite_runtime.rs  vite_runtime_bootstrap.js  vite_tailwind_vite.js  vite_url.js  widget_entrypoint.rs
