[package]
name = "gdansk"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
tokio = "1.40"

# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py311" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.11
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

rolldown = { git = "https://github.com/rolldown/rolldown.git", tag="v1.0.0-rc.4", features = ["experimental"] }
rolldown_dev = { git = "https://github.com/rolldown/rolldown.git", tag="v1.0.0-rc.4" }
