[package]
name = "gdansk"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
tokio = "1.40"
dunce = "1.0"

# python
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# javascript
deno_core = "0.385.0"
rolldown = { git = "https://github.com/rolldown/rolldown.git", tag="v1.0.0-rc.5", features = ["experimental"] }
rolldown_dev = { git = "https://github.com/rolldown/rolldown.git", tag="v1.0.0-rc.5" }

[build-dependencies]
deno_core = "0.385.0"
