[project]
name = "gdansk"
version = "0.1.0"
description = "Interactive UI Tools for MCP Servers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "mcp>=1.25.1.dev114,<1.26",
    "minijinja>=2,<3",
]

[tool.maturin]
module-name = "gdansk._core"
python-packages = ["gdansk"]
python-source = "src"
exclude = ["**/__tests__/**"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.uv.sources]
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git", rev = "main" }

[tool.uv.workspace]
members = [
    "packages/gdansk-runtime",
    "packages/gdansk-bundler",
    "packages/gdansk-lightningcss",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "anyio>=4",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "rumdl>=0.1.21",
    "ty>=0.0.17",
]

[tool.ruff]
target-version = "py312"
line-length = 120
include = ["pyproject.toml"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused (common in __init__.py to re-export symbols)
]
"examples/fastapi/main.py" = [
    "INP001", # example entrypoint is intentionally not part of a package
]
"**/__tests__/**/*" = [
    "D", # pydocstyle (i.e. ignore missing/malformed docstrings)
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # function call in argument defaults (required for FastAPI Depends)
    "F841",    # local variable assigned but never used
    "FAST002", # FastAPI dependency without Annotated
    "INP001",  # implicit namespace package (tests dir may not need __init__.py)
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison (fine in test cases)
    "S101",    # use of assert (tests typically use assert directly)
    "S106",    # possible hardcoded password (test secrets are fine)
    "SLF001",  # private member accessed
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
anyio_mode = "auto"
norecursedirs = ["target", "dist", "build", ".venv", "node_modules"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that hit the database or external services",
]
filterwarnings = [
    "error",
]

[tool.rumdl.MD013]
line_length = 120
reflow = true
code_blocks = false
tables = false
