[project]
name = "gdansk"
version = "0.1.0"
description = "Interactive UI Tools for MCP Servers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "gdansk-bundler",
    "gdansk-lightningcss",
    "gdansk-runtime",
    "gdansk-tailwindcss",
    "gdansk-vite",
    "mcp>=1.25.1.dev114,<1.26",
    "minijinja>=2,<3",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.py" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.uv.sources]
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git", rev = "main" }
gdansk-bundler = { workspace = true }
gdansk-lightningcss = { workspace = true }
gdansk-runtime = { workspace = true }
gdansk-tailwindcss = { workspace = true }
gdansk-vite = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/gdansk-runtime",
    "packages/gdansk-bundler",
    "packages/gdansk-lightningcss",
    "packages/gdansk-tailwindcss",
    "packages/gdansk-vite",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "anyio>=4",
    "gdansk-bundler",
    "gdansk-lightningcss",
    "gdansk-runtime",
    "gdansk-tailwindcss",
    "gdansk-vite",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "rumdl>=0.1.21",
    "ty>=0.0.17",
]

[tool.ruff]
target-version = "py312"
line-length = 120
include = ["pyproject.toml"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # __init__ modules intentionally omit module docstrings
    "F401", # imported but unused (common in __init__.py to re-export symbols)
]
"src/gdansk/_core.py" = [
    "D100", # internal compatibility module intentionally omits a module docstring
    "C901", # internal orchestration functions are intentionally consolidated
    "FBT001", # compatibility API keeps bool positional parameters
    "FBT002", # compatibility API keeps bool positional parameters
    "PLR0912", # internal page normalization branches on user-facing path shapes
    "PLR0913", # orchestration helpers accept explicit build inputs
    "PLR0915", # internal page normalization performs one-pass validation
    "PLR2004", # internal path validation uses small fixed segment counts
]
"src/gdansk/protocol.py" = [
    "D100", # protocol module intentionally omits a module docstring
]
"packages/gdansk-lightningcss/src/gdansk_lightningcss/bundle.py" = [
    "PLR0913", # bundling helper takes explicit inputs instead of config objects
]
"examples/fastapi/main.py" = [
    "INP001", # example entrypoint is intentionally not part of a package
]
"**/__tests__/**/*" = [
    "D", # pydocstyle (i.e. ignore missing/malformed docstrings)
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # function call in argument defaults (required for FastAPI Depends)
    "F841",    # local variable assigned but never used
    "FAST002", # FastAPI dependency without Annotated
    "INP001",  # implicit namespace package (tests dir may not need __init__.py)
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison (fine in test cases)
    "S101",    # use of assert (tests typically use assert directly)
    "S106",    # possible hardcoded password (test secrets are fine)
    "SLF001",  # private member accessed
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
anyio_mode = "auto"
norecursedirs = ["target", "dist", "build", ".venv", "node_modules"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that hit the database or external services",
]
filterwarnings = [
    "error",
]


[tool.rumdl]
line_length = 120

[tool.rumdl.MD013]
reflow = true
code_blocks = false
tables = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["gdansk.__tests__*"]

[tool.setuptools.package-data]
gdansk = ["_core.pyi", "*.j2"]
