[project]
name = "mount"
version = "0.1.0"
description = "Super simple FastAPI mounted Gdansk example"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi[standard]",
    "gdansk",
    "pydantic-settings",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { deno = false }

[tool.uv.sources]
gdansk = { path = "../../", editable = true }
