[project]
name = "gdansk-inertia-example"
version = "0.1.0"
description = "Ship-backed Inertia example for gdansk"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.1",
    "gdansk",
    "itsdangerous>=2.2.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { deno = false }

[tool.uv.sources]
gdansk = { path = "../../", editable = true }
