[project]
name = "ssr"
version = "0.1.0"
description = "Simple SSR example for Gdansk"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "gdansk",
]

[project.scripts]
main = "ssr.__main__:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
gdansk = { path = "../../", editable = true }
